--- a/ComicDownloader/Forms/DownloaderInfoForm.resx
+++ b/ComicDownloader/Forms/DownloaderInfoForm.resx
@@ -120,4 +120,7 @@
   <data name="label10.Text" xml:space="preserve">
     <value>Update list story will take a while, Current list will be destroy and replace by the updated list from website. This process will take few minute depend on the site. During time software update list story you still able to use other functions</value>
   </data>
+  <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
