--- a/ComicDownloader/Forms/DownloaderInfoForm.resx
+++ b/ComicDownloader/Forms/DownloaderInfoForm.resx
@@ -118,9 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="label10.Text" xml:space="preserve">
-    <value>Update list story will take a while, Current list will be destroy and replace by the updated list from website. This process will take few minute depend on the site. During time software update list story you still able to use other functions</value>
+    <value>Updating list story will take a while, Current list will be destroyed and replaced by the updated list from website. This process will take few minutes depend on the site / your network speed/your PC perfomance. During time software update list story you still able to use other functions with a little laggy</value>
   </data>
-  <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
 </root>
