--- a/ComicDownloader/Forms/DownloaderForm.resx
+++ b/ComicDownloader/Forms/DownloaderForm.resx
@@ -141,4 +141,7 @@
   <metadata name="errInvalidFileName.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>766, 17</value>
   </metadata>
+  <metadata name="tooltip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>172, 56</value>
+  </metadata>
 </root>
