--- a/ComicDownloader/Properties/Resources.resx
+++ b/ComicDownloader/Properties/Resources.resx
@@ -700,4 +700,7 @@
   <data name="CoverTemplate" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\CoverTemplate.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="replace_tokens" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\replace_tokens.csv;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
